<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_marginVertical="25dp"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/productText"
            android:layout_marginBottom="15dp"
            android:id="@+id/productText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/initText"
            android:layout_marginBottom="15dp"
            android:id="@+id/initText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/dataseriesTimepoint"
            android:layout_marginBottom="15dp"
            android:id="@+id/dataseriesTimepoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginBottom="15dp"
            android:text="@string/dataseriesTemperature"
            android:id="@+id/dataseriesTransparency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/dataseriesTransparency"
            android:id="@+id/dataseriesTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <EditText
            android:id="@+id/lonField"
            android:hint="@string/lonField"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <EditText
            android:id="@+id/latField"
            android:hint="@string/latField"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitButton"/>

    </LinearLayout>

</LinearLayout>